--- a/A/Altice/Altice_January2020/ads/MC_OPT_AO_64/320x50/320x50_frame1.html
+++ b/A/Altice/Altice_January2020/ads/MC_OPT_AO_64/320x50/320x50_frame1.html
@@ -23,8 +23,8 @@
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
-        width: 160px;
-        height: 600px;
+        width: 320px;
+        height: 50px;
         font-family: Arial,Helvetica,sans-serif;
         color: #000;
       }
@@ -60,42 +60,31 @@
         width:inherit;
         height:inherit;
       }
-      .transparent { color:transparent; }
-      .verticalBar {
-        position: absolute;
-        top:0px;
-        width: 5px;
-        height: 48px;
-        background-color: #fff;
-        transform-origin: top center;
-      }
       #cta { background-color: !{ctaBtn}; }
       #cta:hover { background-color: !{ctaBtnHover}; }
       #introCta { background: !{ctaBtn}; }
       #introCta:hover { background-color: !{ctaBtnHover}; }
     </style>
-<!-- Start of overrode asset attributes values -->
+  <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
 amo.registerClick("clickUrl","https://www.altice.com");
-amo.registerAttribute("frameVideo1","TEXT","https://ct.tubemogul.com/web/altice/2020-01/BDY_300x200.mp4");
+amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/2020-01/BDY_340x100.mp4");
 amo.registerAttribute("ctaText","TEXT","Ver más");
-amo.registerAttribute("frameImage2","IMAGE","160x600_OPT_1P_39_1yr_300Mbps_Img_Frame02.png");
-amo.registerAttribute("frameImage3","IMAGE","160x600_OPT_1P_39_1yr_300Mbps_Img_Frame03.png");
+amo.registerAttribute("frameImage2","IMAGE","1x1.png");
+amo.registerAttribute("frameImage3","IMAGE","1x1.png");
 amo.registerAttribute("frameImage4","IMAGE","1x1.png");
-amo.registerAttribute("frameImage5","IMAGE","160x600_OPT_1P_39_1yr_300Mbps_Img_Frame05.png");
+amo.registerAttribute("frameImage5","IMAGE","1x1.png");
 amo.registerAttribute("frameText1","TEXT","&nbsp;");
-amo.registerAttribute("frameText21","TEXT","<div style='top: 56px;left:14px;line-height:1.1;'><div style='font-size: 20px;letter-spacing: -0.1px;'><div style='font-size: 14px;color: #0084d6;'>Por tiempo limitado</div></div></div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top: 74px;left: 14px;line-height:1.1;'><div style='font-size: 19px;letter-spacing:-0.1px;'>con Internet<br>de 300 megas</div><div style='color:#0084d6;font-size:60px;margin-top:-4px;margin-left: -3px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>39<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;'>99</sup></div></div>");
-amo.registerAttribute("frameText23","TEXT","<div style='top: 168px;left: 14px;font-size:16px;letter-spacing:-0.1px;'>mes/1 año<div class='AlticeRegular' style='font-size:10px;margin-top: -2px;'>más tarifas, imptos. y cargos</div></div>");
-amo.registerAttribute("frameText31","TEXT","<div style='top: 57px;left: 15px;line-height: 1.2;letter-spacing:-0.1px;'><div style='color: #0084d6;font-size: 20px;'>50% más capacidad<br>de velocidad que Fios<sup style='font-size:60%;vertical-align:43%;'>®</sup> <span style='color:#000;'><br>y por $10<br>menos al mes</span></div></div>");
-amo.registerAttribute("frameText32","TEXT","<div class='AlticeRegular' style='top: 445px;left: 14px;line-height: 1.2;font-size:8.8px;letter-spacing:-0.1px;'>Basado en la oferta en línea de<br>200 megas de Verizon Fios<sup style='font-size:60%;vertical-align:43%;'>®</sup> con<br>facturación mensual estándar a<br>partir del 6 de enero de 2020.</div>");
+amo.registerAttribute("frameText21","TEXT","<div style='top: 6px;left: 8px;line-height: 1.6;font-size: 14px;'><div><span style='color:#0084d6;padding-right:3px;'>+</span>Internet de hasta <font style='color:#0084d6;'>200 megas</font></div></div>");
+amo.registerAttribute("frameText22","TEXT","<div style='top: 24px;left: 8px;line-height: 1.6;font-size: 14px;'><div><span style='color:#0084d6;padding-right:3px;'>+</span>Más de 220 canales</div></div>");
+amo.registerAttribute("frameText23","TEXT","&nbsp;");
+amo.registerAttribute("frameText31","TEXT","<div style='top:9px;left:8px;font-size:14px;letter-spacing:-0.2px;line-height:17px;'>Tarjeta de regalo Amazon.com<br>de <font style='color: #0084d6;'>$100</font></div>&nbsp;");
+amo.registerAttribute("frameText32","TEXT","<div style='top:25px;left:62px;font-size:14px;letter-spacing: -0.2px;'><font class='AlticeRegular' style='font-size: 9.3px;'>Aplican restricciones.</font></div>");
 amo.registerAttribute("frameText33","TEXT","&nbsp;");
-amo.registerAttribute("frameText41","TEXT","<div style='top: 52px;left: 15px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Internet de hasta</div><div style='margin-top:-6px;margin-left:14px;'>300 megas</div></div>");
-amo.registerAttribute("frameText42","TEXT","<div style='top:94px;left:15px;line-height:1.6;font-size:15px;color:#0084d6;'><span style='color:#0084d6;padding-right:4px;'>+</span>Datos ilimitados</div>");
-amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='position: absolute;top: 450px;left:15px;font-size:9.5px;'>Conexión por cable.<br>Velocidades WiFi podrían variar.</div>");
-amo.registerAttribute("frameText51","TEXT","<div style='top: 56px;left:14px;line-height:1.1;'><div style='font-size:14px;letter-spacing:-0.1px;color: #0084d6;'>Por tiempo limitado</div><div style='margin-top:4px;left:16px;line-height:1.1;font-size:20px;letter-spacing:-0.4px;'>Internet de<br />300 megas</div></div>");
-amo.registerAttribute("frameText52", "TEXT", "<div style='top: 117px;left: 13px;line-height:1.1;'><div style='color:#0084d6;font-size:60px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>39<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;'>99</sup></div><div style='font-size:16px;letter-spacing:-0.1px;margin-top: -7px;margin-left: 2px;'>mes/1 año<div class='AlticeRegular' style='font-size:10px;margin-top: 2px;'>más tarifas, imptos. y cargos</div></div></div>");
-amo.registerAttribute("frameText53", "TEXT", "<div style='top: 230px;left: 16px;line-height: 1.5;font-size: 14px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right: 5px;'>+</span>Sin contratos</div><div><span style='color:#0084d6;padding-right: 5px;'>+</span>Instalación gratis</div></div>");
+amo.registerAttribute("frameText41", "TEXT", "<div style='top: 2px;left: 8px;font-size: 14.5px;'>Altice One e Internet</div>");
+amo.registerAttribute("frameText42", "TEXT", "<div style='top: 20px;left: 8px;font-size:15.4px;letter-spacing: -0.2px;line-height: 1;color:#0084d6;'>$64.99 mes/2 años</div>");
+amo.registerAttribute("frameText43", "TEXT", "<div style='top: 35px;left: 8px;font-size: 9.4px;letter-spacing: -0.1px;' class='AlticeRegular'>más tarifas, imptos. y cargos</div>");
+amo.registerAttribute("frameImage1", "IMAGE", "1x1.png");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -112,7 +101,6 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 230px;left: 16px;
     </div>
     <!-- <div id="ref" class="asset adSizeContainer" data-image="ref"></div> -->
     <div id="logoImage" class="asset adSizeContainer" data-image="logoImage"></div>
-    <div id="frameBackground" class="asset adSizeContainer" data-image="frameBackground" style="display:none;"></div>
     <div id="frameImage2" class="asset frameImage" data-image="frameImage2"></div>
     <div id="frameText21" class="frameText">!{frameText21}</div>
     <div id="frameText22" class="frameText">!{frameText22}</div>
@@ -125,18 +113,13 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 230px;left: 16px;
     <div id="frameText41" class="frameText">!{frameText41}</div>
     <div id="frameText42" class="frameText">!{frameText42}</div>
     <div id="frameText43" class="frameText">!{frameText43}</div>
-    <div id="frameImage5" class="asset frameImage" data-image="frameImage5"></div>
-    <div id="frameText51" class="frameText">!{frameText51}</div>
-    <div id="frameText52" class="frameText">!{frameText52}</div>
-    <div id="frameText53" class="frameText">!{frameText53}</div>
-    <!-- <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div> -->
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
-      style="top:551px;
-        left:42px;
-        width:76px;
-        height:22px;
-        font-size:12px;
+      style="top:33px;
+        right:41px;
+        width:40px;
+        height:12px;
+        font-size:6px;
         color:#fff;">
     </div>
     <div id="frame1" class="frame"
@@ -145,17 +128,17 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 230px;left: 16px;
       transition:opacity ease-out 0.3s, transform ease-out 0.3s;
       background-color:#000;
       opacity:1;">
-      <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
-      <div id="frameVideo1" style="top:194px;left:11px;width:inherit;height:inherit;"><video muted playsinline autoplay style="width:87%;"></video></div>
+      <!-- <div id="ref" class="asset adSizeContainer" data-image="ref"></div> -->
+      <div id="frameVideo1" style="top:-6px;left:0px;width:inherit;height:inherit;"><video muted playsinline autoplay style="width:66%;"></video></div>
       <div id="frameText1" class="frameText">!{frameText1}</div>
       <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
-        style="top:551px;
-          left:42px;
-          width:76px;
-          height:22px;
-          font-size:12px;
+        style="top:33px;
+          right:41px;
+          width:40px;
+          height:12px;
+          font-size:6px;
           color:#fff;">
       </div>
     </div>
@@ -166,11 +149,12 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 230px;left: 16px;
     <div class="AlticeBold" style="color:transparent;">AlticeBold</div>
   </div>
   <script type="text/javascript">
-    
+
+
     var ad = new Ad({
       root: document.querySelector('#ad'),
-      width: 160,
-      height: 600,
+      width: 320,
+      height: 50,
       borderWidth: 1,
       borderColor: '#000'
     });
@@ -179,18 +163,16 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 230px;left: 16px;
         cam: {},
         feed: [],
         staticData: {
-          logoImage: 'images/160x600_Logo_Optimum_Black.png',
-          introLogoImage: 'images/160x600_Logo_Optimum_White.png',
-          // priceLabel: '160x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
-          frameBackground: '1x1.png',
+          logoImage: 'images/320x50_Logo_Optimum_Black.png',
+          introLogoImage: 'images/320x50_Logo_Optimum_White.png',
           // starImage: 'images/star.svg',
           ctaBtn: '#0084d6',
           ctaBtnHover: '#005990',
-          // ref: 'ref3.png',
+          // ref: 'ref1.jpg',
         },
         beforeLoad: function(data){
           data.map(function(content){
-            
+
           });
           return data;
         }
@@ -201,13 +183,13 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 230px;left: 16px;
         });
         setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
 
-        textUpdate();
-        gsap.set('.frameImage', {x:'100%'});
-        gsap.set('.frameText', {x:'-100%'});
-        gsap.set('#priceLabel', {y:'-100%'});
+        gsap.set('.frameImage', {x:'-100%'});
+        gsap.set('.frameText', {y:'100%'});
+        gsap.set('div[id^="frameText"][id$="1"], #priceLabel', {x:'-100%',y:0});
         var priceFrameAnimation = function(frame){
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameText'+frame+'1, #frameImage'+frame, {x:0,y:0})
+          .to('#frameImage'+frame, {x:0,y:0})
+          .to('#frameText'+frame+'1', {delay:-0.3, x:0,y:0})
           .to('#frameText'+frame+'2', {delay:-0.2, x:0,y:0})
           .to('#frameText'+frame+'3', {delay:-0.2, x:0,y:0})
           .to('#priceLabel', {delay:-0.2, x:0,y:0});
@@ -221,23 +203,16 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 230px;left: 16px;
         }
         var generalFrameAnimation = function(frame){
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameText'+frame+'1, #frameImage'+frame, {x:0,y:0})
+          .to('#frameImage'+frame, {x:0,y:0})
+          .to('#frameText'+frame+'1', {delay:-0.3, x:0,y:0})
           .to('#frameText'+frame+'2', {delay:-0.2, x:0,y:0})
           .to('#frameText'+frame+'3', {delay:-0.2, x:0,y:0});
         }
-        var animateFrame5 = function(flag){
-          var frameId = 5;
-          gsap.set('#frameBackground', {display: 'none'});
-          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: priceFrameAnimation, onCompleteParams:[5]})
-          // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', {delay: 2.2, opacity:0});
-        }
         var animateFrame4 = function(flag){
           var frameId = 4;
-          gsap.set('#frameBackground', {display: 'block'});
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[4]})
-          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.2, opacity:0, onComplete: animateFrame5}));
+          // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.2, opacity:0, onComplete: animateFrame5}));
         }
         var animateFrame3 = function(flag){
           var frameId = 3;
@@ -257,8 +232,7 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 230px;left: 16px;
             .to('#frame1', (flag==true?{}:{delay:0.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
           }
         }
-        if('frame1' in ad.layers) ad.layers.frame1.remove();
-                    gsap.delayedCall(1.2, animateFrame3, [true]);
+        gsap.delayedCall(.8, animateFrame1, [true]);
       });
     }, 2000);
   </script>
