--- a/A/Altice/Altice_January2020/ads/MC_iSTART_59/160x600/160x600_frame4.html
+++ b/A/Altice/Altice_January2020/ads/MC_iSTART_59/160x600/160x600_frame4.html
@@ -74,28 +74,24 @@
       #introCta { background: !{ctaBtn}; }
       #introCta:hover { background-color: !{ctaBtnHover}; }
     </style>
-<!-- Start of overrode asset attributes values -->
+  <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
 amo.registerClick("clickUrl","https://www.altice.com");
-amo.registerAttribute("frameVideo1","TEXT","https://ct.tubemogul.com/web/altice/2020-01/BDY_300x200.mp4");
+amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/2020-01/BDY_300x200.mp4");
 amo.registerAttribute("ctaText","TEXT","Ver más");
-amo.registerAttribute("frameImage2","IMAGE","160x600_OPT_1P_39_1yr_300Mbps_Img_Frame02.png");
-amo.registerAttribute("frameImage3","IMAGE","160x600_OPT_1P_39_1yr_300Mbps_Img_Frame03.png");
-amo.registerAttribute("frameImage4","IMAGE","1x1.png");
-amo.registerAttribute("frameImage5","IMAGE","160x600_OPT_1P_39_1yr_300Mbps_Img_Frame05.png");
+amo.registerAttribute("frameImage2","IMAGE","160x600_OPT_Jan_iStart_59_1Year_Img_Frame04.png");
+amo.registerAttribute("frameImage3","IMAGE","1x1.png");
+amo.registerAttribute("frameImage4","IMAGE","160x600_SDL_TV_Internet_2P_54mo_1Yr_Phase1_Img_Frame05.png");
 amo.registerAttribute("frameText1","TEXT","&nbsp;");
-amo.registerAttribute("frameText21","TEXT","<div style='top: 56px;left:14px;line-height:1.1;'><div style='font-size: 20px;letter-spacing: -0.1px;'><div style='font-size: 14px;color: #0084d6;'>Por tiempo limitado</div></div></div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top: 74px;left: 14px;line-height:1.1;'><div style='font-size: 19px;letter-spacing:-0.1px;'>con Internet<br>de 300 megas</div><div style='color:#0084d6;font-size:60px;margin-top:-4px;margin-left: -3px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>39<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;'>99</sup></div></div>");
-amo.registerAttribute("frameText23","TEXT","<div style='top: 168px;left: 14px;font-size:16px;letter-spacing:-0.1px;'>mes/1 año<div class='AlticeRegular' style='font-size:10px;margin-top: -2px;'>más tarifas, imptos. y cargos</div></div>");
-amo.registerAttribute("frameText31","TEXT","<div style='top: 57px;left: 15px;line-height: 1.2;letter-spacing:-0.1px;'><div style='color: #0084d6;font-size: 20px;'>50% más capacidad<br>de velocidad que Fios<sup style='font-size:60%;vertical-align:43%;'>®</sup> <span style='color:#000;'><br>y por $10<br>menos al mes</span></div></div>");
-amo.registerAttribute("frameText32","TEXT","<div class='AlticeRegular' style='top: 445px;left: 14px;line-height: 1.2;font-size:8.8px;letter-spacing:-0.1px;'>Basado en la oferta en línea de<br>200 megas de Verizon Fios<sup style='font-size:60%;vertical-align:43%;'>®</sup> con<br>facturación mensual estándar a<br>partir del 6 de enero de 2020.</div>");
-amo.registerAttribute("frameText33","TEXT","&nbsp;");
-amo.registerAttribute("frameText41","TEXT","<div style='top: 52px;left: 15px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Internet de hasta</div><div style='margin-top:-6px;margin-left:14px;'>300 megas</div></div>");
-amo.registerAttribute("frameText42","TEXT","<div style='top:94px;left:15px;line-height:1.6;font-size:15px;color:#0084d6;'><span style='color:#0084d6;padding-right:4px;'>+</span>Datos ilimitados</div>");
-amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='position: absolute;top: 450px;left:15px;font-size:9.5px;'>Conexión por cable.<br>Velocidades WiFi podrían variar.</div>");
-amo.registerAttribute("frameText51","TEXT","<div style='top: 56px;left:14px;line-height:1.1;'><div style='font-size:14px;letter-spacing:-0.1px;color: #0084d6;'>Por tiempo limitado</div><div style='margin-top:4px;left:16px;line-height:1.1;font-size:20px;letter-spacing:-0.4px;'>Internet de<br />300 megas</div></div>");
-amo.registerAttribute("frameText52", "TEXT", "<div style='top: 117px;left: 13px;line-height:1.1;'><div style='color:#0084d6;font-size:60px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>39<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;'>99</sup></div><div style='font-size:16px;letter-spacing:-0.1px;margin-top: -7px;margin-left: 2px;'>mes/1 año<div class='AlticeRegular' style='font-size:10px;margin-top: 2px;'>más tarifas, imptos. y cargos</div></div></div>");
-amo.registerAttribute("frameText53", "TEXT", "<div style='top: 230px;left: 16px;line-height: 1.5;font-size: 14px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right: 5px;'>+</span>Sin contratos</div><div><span style='color:#0084d6;padding-right: 5px;'>+</span>Instalación gratis</div></div>");
+amo.registerAttribute("frameText21", "TEXT", "&nbsp;");
+amo.registerAttribute("frameText22", "TEXT", "<div style='top: 53px;left: 16px;line-height:1.1;'><div style='font-size: 22px;letter-spacing:-0.1px;'>con TV e Internet</div><div style='color:#0084d6;font-size:60px;margin-top:-4px;margin-left: -3px;letter-spacing:-2.5px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>49<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;'>99</sup></div></div>");
+amo.registerAttribute("frameText23", "TEXT", "<div style='top: 155px;left: 15px;font-size:16px;letter-spacing:-0.1px;'>mes/1 año<div class='AlticeRegular' style='font-size:10px;margin-top: 1px;'>más tarifas, imptos. y cargos</div></div>");
+amo.registerAttribute("frameText31","TEXT","<div style='top: 48px;left: 14px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Internet de hasta</div><div style='margin-top: -4px;margin-left: 14px;'>100 megas</div></div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top:92px;left: 14px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Datos ilimitados</div></div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top:116px;left: 14px;line-height: 1.6;font-size: 15px;'><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:4px;'>+</span>Caja de cable</div><div style='color:#0084d6;margin-top:-4px;margin-left:14px;'>HD gratis</div></div><div class='AlticeRegular' style='position: absolute;top: 445px;left: 20px;font-size:9.5px;'>Conexión por cable.<br>Velocidades WiFi<br>pueden variar.</div>");
+amo.registerAttribute("frameText41", "TEXT", "<div style='top: 53px;left: 16px;line-height:1.1;'><div style='font-size: 22px;letter-spacing: -0.4px;'>TV e Internet</div></div>");
+amo.registerAttribute("frameText42", "TEXT", "<div style='top: 97px;left: 13px;line-height:1.1;'><div style='color:#0084d6;font-size:60px;letter-spacing:-2.5px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>49<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;'>99</sup></div><div style='font-size:16px;letter-spacing:-0.1px;margin-top: -7px;margin-left: 2px;'>mes/1 año<div class='AlticeRegular' style='font-size:10px;margin-top: 4px;'>más tarifas, imptos. y cargos</div></div></div>");
+amo.registerAttribute("frameText43", "TEXT", "<div style='top: 210px;left: 16px;line-height: 1.5;font-size: 14px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right: 5px;'>+</span>$100 Amazon.com</div><div style='margin-top: -5px;margin-left:14px;'>Gift Card</div><div><span style='color:#0084d6;padding-right:4px;'>+</span>No Annual</div><div style='margin-top: -4px;margin-left: 14px;'>Contract</div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -125,10 +121,6 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 230px;left: 16px;
     <div id="frameText41" class="frameText">!{frameText41}</div>
     <div id="frameText42" class="frameText">!{frameText42}</div>
     <div id="frameText43" class="frameText">!{frameText43}</div>
-    <div id="frameImage5" class="asset frameImage" data-image="frameImage5"></div>
-    <div id="frameText51" class="frameText">!{frameText51}</div>
-    <div id="frameText52" class="frameText">!{frameText52}</div>
-    <div id="frameText53" class="frameText">!{frameText53}</div>
     <!-- <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div> -->
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
@@ -186,7 +178,7 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 230px;left: 16px;
           // starImage: 'images/star.svg',
           ctaBtn: '#0084d6',
           ctaBtnHover: '#005990',
-          // ref: 'ref3.png',
+          // ref: 'ref.png',
         },
         beforeLoad: function(data){
           data.map(function(content){
@@ -237,7 +229,7 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 230px;left: 16px;
           gsap.set('#frameBackground', {display: 'block'});
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[4]})
-          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.2, opacity:0, onComplete: animateFrame5}));
+          // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.2, opacity:0, onComplete: animateFrame5}));
         }
         var animateFrame3 = function(flag){
           var frameId = 3;
@@ -258,7 +250,7 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 230px;left: 16px;
           }
         }
         if('frame1' in ad.layers) ad.layers.frame1.remove();
-                    gsap.delayedCall(1.2, animateFrame3, [true]);
+                    gsap.delayedCall(1.2, animateFrame4, [true]);
       });
     }, 2000);
   </script>
